<resources>
    <string name="app_name">Safe2Home</string>
    <string name="register_btn">Register</string>
    <string name="login_btn">Login</string>
    <string name="hint_Email">Email</string>
    <string name="hint_password">Password</string>
    <string name="registerBtn">Register</string>
    <string name="profile_Tv">Profile</string>
    <string name="register_title">Register</string>
    <string name="login_title">Login</string>
    <string name="not_have_account_register_Tv_prompt">Not have account? Register</string>
    <string name="already_have_account_login_Tv_prompt">Already have account? Login</string>
    <string name="login_forgot_passwordTv">Forgot Password?</string>
    <string name="menu_logout_title">Logout</string>
</resources>